--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <body>
   <div id="root"></div>
   <script type="text/babel">
+    const title = "주제";
     ReactDOM.render(
-      <div>
+      <div a="a">
         <div>
           <h1>
-            주제
+            {title}
           </h1>
           <ul>
             <li>
