--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
   <div id="root"></div>
+  <div id="main"></div>
+  <div id="sub"></div>
   <script type="text/babel">
     const title = "주제";
     ReactDOM.render(
@@ -32,6 +34,68 @@
         </div>
       </div>,
       document.querySelector("#root")
+    );
+  </script>
+  <script type="text/babel">
+    // function Component(props) {
+    //   return (
+    //     <div>
+    //       <h1>{props.message} 이것은 함수로 만든 컴포넌트 입니다. </h1>
+    //     </div>
+    //   );
+    // }
+    // Component.defaultProps = {
+    //   message: '기본값',
+    // };
+    class ClassComponent extends React.Component {
+      // 방법 1
+      // state = {
+      //   count: 0,
+      // };
+      // 방법 2
+      constructor(props) {
+        super(props);
+        this.state = {count: 0};
+      }
+      render() {
+        return (
+          <div>
+            <h1>{this.props.message} 이것은 클래스로 만든 컴포넌트 입니다. </h1>
+            <p>
+              {this.state.count}
+            </p>
+          </div>
+        );
+      }
+      componentDidMount() {
+        setTimeout(() => {
+          // 방법 1
+          // this.setState({
+          //   count: this.state.count + 1,
+          // });
+          // 방법 2
+          this.setState((previousState) => {
+            const newState = {
+              count: previousState.count + 1
+            }
+            return newState;
+          });
+        }, 1000);
+      }
+      static defaultProps = {
+        message: '기본값',
+      };
+    }
+    // ClassComponent.defaultProps = {
+    //   message: '기본값',
+    // }
+    // ReactDOM.render(
+    //   <Component />,
+    //   document.querySelector("#main")
+    // );
+    ReactDOM.render(
+      <ClassComponent />,
+      document.querySelector("#sub")
     );
   </script>
 </body>
