--- a/index.html
+++ b/index.html
@@ -94,36 +94,50 @@
     //   }
     // }
 
-    let i = 0;
+    // let i = 0;
 
+    // class App extends React.Component {
+    //   state = {list: []};
+    //   render() {
+    //     return (
+    //       <div id="list" style={{height: 100, overflow: "scroll"}}>
+    //         {this.state.list.map(i => {
+    //           return <div>{i}</div>;
+    //         })}
+    //       </div>
+    //     );
+    //   }
+    //   componentDidMount() {
+    //     setInterval(() => {
+    //       this.setState(state => ({
+    //         list: [...state.list, i++],
+    //       }));
+    //     }, 1000);
+    //   }
+    //   getSnapshotBeforeUpdate(prevProps, prevState) {
+    //     if (prevState.list.length == this.state.list.length) return null;
+    //     const list = document.querySelector("#list");
+    //     return list.scrollHeight - list.scrollTop;
+    //   }
+    //   componentDidUpdate(prevProps, prevState, snapshot) {
+    //     console.log(snapshot);
+    //     if (snapshot == null) return;
+    //     const list = document.querySelector("#list");
+    //     list.scrollTop = list.scrollHeight - snapshot;
+    //   }
+    // }
     class App extends React.Component {
-      state = {list: []};
+      state = {
+        hasError: false,
+      };
       render() {
-        return (
-          <div id="list" style={{height: 100, overflow: "scroll"}}>
-            {this.state.list.map(i => {
-              return <div>{i}</div>;
-            })}
-          </div>
-        );
+        if (this.state.hasError) {
+          return <div>예상치 못한 에러가 발생</div>;
+        }
+        return (<WebService />);
       }
-      componentDidMount() {
-        setInterval(() => {
-          this.setState(state => ({
-            list: [...state.list, i++],
-          }));
-        }, 1000);
-      }
-      getSnapshotBeforeUpdate(prevProps, prevState) {
-        if (prevState.list.length == this.state.list.length) return null;
-        const list = document.querySelector("#list");
-        return list.scrollHeight - list.scrollTop;
-      }
-      componentDidUpdate(prevProps, prevState, snapshot) {
-        console.log(snapshot);
-        if (snapshot == null) return;
-        const list = document.querySelector("#list");
-        list.scrollTop = list.scrollHeight - snapshot;
+      componentDidCatch(error, info) {
+        this.setState({ hasError: true });
       }
     }
     ReactDOM.render(<App name="uhan"/>, document.querySelector("#main"));
